# RAJNI-ViT

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  schedule.json  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
configs/: default.yaml  high_accuracy.yaml  lightweight.yaml
evaluation/: __init__.py  baseline.py  benchmark.py  flops.py  visualize.py
examples/: demo.ipynb  run_cifar.py  run_imagenet.py
rajni/: __init__.py  attention.py  baseline_benchmark.py  benchmark.py  eval.py  flops.py  importance.py  model.py  pruning.py  run.py  utils.py  visualise.py
rajni/config/: __init__.py  config_loader.py
rajni/pruning/: __init__.py  rajni_wrapper.py
rajni/utils/: __init__.py  logger.py  metrics.py
rajni/wrapper/: __init__.py  attention.py  model.py
scripts/: benchmark.py  benchmark_imagenet.sh  compare_models.sh  diagnostic.py  evaluate.py  example.py  sweep_gamma.sh  validate_combined.py  validate_eta.py  validate_rho.py
tests/: __init__.py  conftest.py  test_flops.py  test_model.py
